--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -79,7 +79,7 @@
           work correctly both with client-side routing and a non-root public URL.
           Learn how to configure a non-root public URL by running `npm run build`.
         -->
-    <title>Material Dashboard React by Creative Tim</title>
+    <title>ZC Leagues -- Zone Control CE</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
