Resolved issue with staticfiles and rendering in edge.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,6 +17,7 @@
 */
 
 -->
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -30,12 +31,12 @@
           manifest.json provides metadata used when your web app is added to the
           homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
         -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="manifest" href="{% static 'manifest.json' %}" />
+    <link rel="shortcut icon" href="{% static 'favicon.ico' %}" />
     <link
       rel="apple-touch-icon"
       sizes="76x76"
-      href="%PUBLIC_URL%/apple-icon.png"
+      href="{% static 'apple-icon.png' %}"
     />
     <link
       rel="stylesheet"
@@ -79,7 +80,7 @@
           work correctly both with client-side routing and a non-root public URL.
           Learn how to configure a non-root public URL by running `npm run build`.
         -->
-    <title>ZC Leagues -- Zone Control CE</title>
+    <title>Material Dashboard React by Creative Tim</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
